Fix 3D models on mobile

--- a/src/styles/ProductDetail.css
+++ b/src/styles/ProductDetail.css
@@ -92,7 +92,7 @@
 }
 
 .product-detail--mobile .product-detail__model {
-  height: 50vh;
+  height: 65vh;
   width: 100%;
 }
 
